
* Version 4.0pre8

+ Bug Fixes

- Fixed tip of the day that referred to the old S+BACK_SPACE/S+DELETE
  bindings
- Due to a typo in 4.0pre7, text areas that didn't have focus would also
  scroll to the caret location on a buffer change. This was not supposed
  to happen
- The text area will no longer scroll up and then down again on input if
  it is smaller than about six lines vertically

* Version 4.0pre7

+ Enhancements

- Yet-another-optimization to file loading. Directory search should be
  even faster
- Added a hack to prevent the WheelMouse plugin version 0.5 from being
  loaded under JDK 1.4
- It should now be possible to bind shortcuts to the numeric keypad,
  although this might not work perfectly on all Java implementations due
  to implementation bugs
- MacOS plugin version 1.1 (Kris Kopicki)
- 'Expand Folds With Level' and 'Expand All Folds' commands now scroll
  the text area to the caret position if necessary
- Documentation is now generated using DocBook-XSL 1.49, DocBook-DSSSL
  1.76
- Some people found it confusing that 'Delete to Start of Line' and
  'Delete to End of Line' were bound to S+BACK_SPACE and S+DELETE,
  respectively, because it was easy to accidentally invoke them when
  you meant to press just BACK_SPACE or DELETE if you were typing some
  capitalized text. Now the shortcuts of these commands has been changed
  to CS+BACK_SPACE and CS+DELETE, respectively.
- BeanShell 1.2b41 included
- Documentation updates
- Moved 'more accurate syntax highlighting' option from 'Loading and
  Saving' option pane to 'Text Area' option pane

+ Bug Fixes

- First time jEdit was run, the file system's divider position would be
  such that the parent directories list would be invisible
- 'End' key didn't work properly
- Due to the changes in buffer property handling caused by the
  transition to the new document model, new files would always have the
  system default line separator and encoding, instead of the defaults